# Anny.Mei

./: .gitignore  ApplicationConfig.h.in  CMakeLists.txt  LICENSE  README.md  imgui.ini  main.cpp
ZipLib/: .gitignore  CMakeLists.txt  ZipLibConfig.h.in
ZipLib/extlibs/bzip2/: .gitignore  CMakeLists.txt  bzip2Config.h.in
ZipLib/extlibs/lzma/: .gitignore  CMakeLists.txt  lzmaConfig.h.in
ZipLib/extlibs/zlib/: .gitignore  CMakeLists.txt  zlibConfig.h.in
glad/: glad.c
imgui/: imgui_impl_opengl3.cpp
include/: .gitignore  AnimControl.h  AnimValue.h  AppMain.h  Application.h  Camera.h  ColorTheme.h  Component.h  DataStore.h  DepthRenderTexture.h  EditorController.h  FileDialog.h  FileUtils.h  ICCFile.h  InputControl.h  IntermediateRenderer.h  KritaLoader.h  Material.h  MemoryStream.h  ModelController.h  ModelEditor.h  ModelPreview.h  MorphPlane.h  Name.h  Namer.h  Object.h  PBOTexture.h  PascalString.h  PropertyFile.h  RenderTexture.h  ShaderProgram.h  SkeletonController.h  SkeletonEditor.h  StaticTransform.h  Texture.h  TextureEditor.h  Transform.h  TriImage.h  VariableUtils.h  VirtualCamera.h  (+3 more)
include/Components/: Component.h  ImageMask.h  ImageRenderer.h  MorphPlaneMask.h  MorphPlaneRenderer.h  MorphTargetMask.h  MorphTargetRenderer.h  MouseScale.h  MouseTranslation.h  Renderer.h
include/Exporters/: ImageSetExporter.h
include/FileLoaders/: ICCFile.h  ImageLoader.h  KritaLoader.h  PSDLoader.h  XMLFile.h
include/KeyValues/: BoolKeyValue.h  FloatKeyValue.h  IntKeyValue.h  KeyValue.h  QuatKeyValue.h  SetIntKeyValue.h  StringKeyValue.h  Vec2KeyValue.h  Vec3KeyValue.h
include/Models/: Model.h  MorphPlaneModel.h  MorphTargetModel.h  SkinnedModel.h
include/Renderers/: ImageDisplay.h  MorphPlaneDisplay.h  MorphTargetDisplay.h
include/VirtualCameras/: V4L2VirtualCamera.h  VirtualCamera.h
include/WindowControls/: AnimControlWindow.h  ModelControllerWindow.h  ModelEditorWindow.h  SkeletonEditorWindow.h  TextureEditorWindow.h
lib/glad/glad/: glad.h
lib/imgui/: imgui.cpp  imgui_draw.cpp  imgui_internal.h
lib/stb/: .gitignore
modules/: FileToHeader.cmake
rapidxml-1.13/: rapidxml.hpp
shaders/: MaskedPixel.glsl  ModelVertex.glsl  MorphPlaneVertex.glsl  MorphTarget9PointVertex.glsl  MorphTargetVertex.glsl  SolidPixel.glsl  SolidPixelColor.glsl  StandardPixel.glsl  ViewVertex.glsl
src/: AValue.cpp  AnimControl.cpp  AnimControlWindow.cpp  AppMain.cpp  Application.cpp  BoolKeyValue.cpp  Camera.cpp  Component.cpp  DataStore.cpp  DepthRenderTexture.cpp  FileDialog.cpp  FileUtils.cpp  FloatKeyValue.cpp  ICCFile.cpp  ImageDisplay.cpp  ImageMask.cpp  ImageRenderer.cpp  ImageSetExporter.cpp  InputControl.cpp  IntKeyValue.cpp  IntermediateRenderer.cpp  KeyValue.cpp  KritaImage.cpp  KritaLayer.cpp  KritaLoader.cpp  Material.cpp  Model.cpp  ModelController.cpp  ModelControllerWindow.cpp  ModelEditor.cpp  ModelEditorWindow.cpp  ModelPreview.cpp  MorphPlane.cpp  MorphPlaneDisplay.cpp  MorphPlaneMask.cpp  MorphPlaneModel.cpp  MorphPlaneRenderer.cpp  MorphTargetDisplay.cpp  MorphTargetMask.cpp  MorphTargetModel.cpp  (+37 more)
